--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,31 +1,38 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+.container.user-form
+  .row
+    .col-md-6.col-md-offset-3
+      .panel.panel-login
+        .panel-heading
+          .row
+            .col-lg-12.text-center
+              %h3 Edit #{resource_name.to_s.humanize}
+          %hr/
+        .panel-body
+          .row
+            .col-lg-12
+              = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+                = devise_error_messages!
+                .form-group
+                  = f.email_field :email, class: "form-control"
+                  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+                    %div
+                      Currently waiting confirmation for: #{resource.unconfirmed_email}
+                .form-group
+                  %i (leave blank if you don't want to change it)
+                  = f.password_field :password, autocomplete: "off", placeholder: "New password", class: "form-control"
+                .form-group
+                  = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password confirmation", class: "form-control"
+                .form-group
+                  = f.password_field :current_password, autocomplete: "off", placeholder: "Current password", class: "form-control"
+                .form-group
+                  .row
+                    .col-sm-6.col-sm-offset-3
+                      = f.submit "Update", class: "form-control btn btn-register"
+              .form-group
+                .row
+                  .col-sm-6.col-sm-offset-3
+                    = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "form-control btn btn-dlt"
+              .form-group
+                .row
+                  .col-lg-12.text-center
+                    = link_to "Back", :back
