--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -1,7 +1,9 @@
-=@user.email
-=link_to 'Logout', destroy_user_session_path, method: :delete
-= link_to create_project_path, {remote: true, class: "btn btn-project", :type => "button", method: :post} do
-  Add project
+.header
+  =@user.email
+  =link_to 'Logout', destroy_user_session_path, method: :delete
 .projects
   = render @projects
-
+.addprojects
+  = link_to create_project_path, {remote: true, class: "btn btn-project", :type => "button", method: :post} do
+    .glyphicon.glyphicon-plus.project-plus
+    Add TODO list
